<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Capture</string>
    <string name="action_settings">Settings</string>
    <string name="pref_header_price_settings">Price Rating Meanings</string>
    <string name="pref_header_quality_settings">Quality Rating Meanings</string>
    <string name="title_activity_moments">Moments List</string>
    <string name="title_activity_moment_information">Moment</string>
    <string name="action_add_moment">add moment</string>
    <string name="action_delete_moment">delete moment</string>
    <string name="action_add_adventure">add adventure</string>
    <string name="action_delete_adventure">delete adventure</string>
    <string name="action_moment_title">Capture the Moment</string>
    <string name="action_adventure_title">Food Adventure</string>
    <string name="action_save_moment">save moment</string>
    <string name="action_edit_moment">edit moment</string>
    <string name="action_save_adventure">save adventure</string>
	<string name="text_generate_button">Generate Places</string>
    <!-- Used in Edit/Add/View moment -->
    <string name="label_capture_moment">Capture the Moment</string>
    <string name="label_food_adventure">Food Adventure</string>
    <string name="label_adventure_name">Name</string>
    <string name="label_type_of_restaurant">Keyword search</string>
    <string name="label_food">Food</string>
    <string name="label_food_quality">Quality</string>
    <string name="label_price">Price</string>
    <string name="label_description">Comment</string>
    <string name="label_restaurant">Place</string>
    <string name="label_location">Where</string>
    <string name="label_review">My Review</string>
    <string name="label_share">Share</string>
    <string name="label_picture_restaurant"> /@ Restaurant</string>
    <string name="text_take_picture_button">Take a Picture</string>
    <string name="title_activity_edit_moment">Edit Moment</string>
    <string name="food_title_color">#ca5869</string>
    <string name="API_KEY">AIzaSyCgDK8gO6oetbNQZmoePFI5TAfXNbNrwFQ</string>
    <string name="BROWSER_API_KEY">AIzaSyBz997dNB2bAgKKlz19D-pSXChtN668Og8</string>
    <string name="title_activity_food_adventures_list">Food Adventure</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_food_adventures_places_fragment">FoodAdventuresPlacesFragment</string>
    <string name="title_activity_edit_adventure">EditAdventure</string>

</resources>
