<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditAdventure" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".EditAdventure" >

            <TableLayout
                android:id="@+id/TableLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:stretchColumns="1" >

                <TableRow
                    android:id="@+id/tableRowPictureTitle"
                    style="@style/EditMomentRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/foodAdventureTextView"
                        style="@style/EditMomentFont"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_span="2"
                        android:layout_weight="1"
                        android:text="@string/label_food_adventure" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRowMap"
                    style="style/EditMomentRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:layout_span="2" />
                </TableRow>
                <!--
                <TableRow
                    android:id="@+id/tableRowFilters"
                    style="@style/EditMomentRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/typeOfRestaurantTextView"
                        style="@style/EditMomentFont"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_span="1"
                        android:text="@string/label_type_of_restaurant" />

                    <EditText
                        android:id="@+id/typeOfRestaurantEditText"
                        style="@style/EditMomentFontInput.Food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:gravity="top" >
                    </EditText>
                </TableRow> -->

                <TableRow
                    style="@style/EditMomentRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <HorizontalScrollView
                        android:id="@+id/restaurant_lists"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_span="2" >
                    </HorizontalScrollView>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRowGenerateAdventure"
                    style="@style/EditMomentRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:id="@+id/generateAdventureButton"
                        android:layout_width="wrap_content"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_button"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="10dp"
                        android:text="@string/text_generate_button" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableAdventureName"
                    style="@style/EditMomentRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/foodAdentureNameTextView"
                        style="@style/EditAdventureFont"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_span="1"
                        android:text="@string/label_adventure_name" />

                    <EditText
                        android:id="@+id/foodAdventureNameEditText"
                        style="@style/EditAdventureFontInput.Name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_span="1"
                        android:gravity="top" >
                    </EditText>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>